--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "chrome-extension-boilerplate",
-  "version": "1.0.0",
+  "name": "physics",
+  "version": "0.0.1",
   "description": "Enter description here",
   "main": "index.js",
-  "repository": "https://github.com/vivek9patel/chrome-extension-react-boilderplate",
   "author": "vivek9patel",
   "license": "MIT",
   "scripts": {
@@ -12,17 +11,19 @@
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
-    "style-loader": "^3.3.1",
     "three": "^0.146.0"
   },
   "devDependencies": {
-    "css-loader": "^6.5.1",
-    "copy-webpack-plugin": "^10.2.0",
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "babel-loader": "^8.2.3",
-    "webpack": "^5.65.0",
+    "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.5.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.9.1",
     "webpack-merge": "^5.8.0"
   }
