Update project name to sandbox

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "physics",
+  "name": "sandbox",
   "version": "0.0.1",
   "description": "Enter description here",
   "main": "index.js",
